syntax = "proto3";

package orders;

option go_package = "github.com/MatTwix/Food-Delivery-Agregator/common/proto";

service OrderService {
    rpc GetOrderOwner(GetOrderOwnerRequest) returns (GetOrderOwnerResponce);
    rpc ListOrders(ListOrdersRequest) returns (ListOrdersResponce);
}

message GetOrderOwnerRequest {
    string order_id = 1;
}

message GetOrderOwnerResponce {
    string user_id = 1;
}

message ListOrdersRequest {
    string status = 1;
    int64 next_retry_at_lte = 2;
    int32 limit = 3;
}

message OrderLite {
    string id = 1;
    int32 retry_count = 2;
    int32 max_retry_count = 3;
    int64 next_retry_at = 4;
}

message ListOrdersResponce {
    repeated OrderLite orders = 1;
}
